Fixes de la tabla, tracroute a interfaz