@@ -57,19 +57,21 @@ public class DesplegableComponent<T> {
     }
 
     public void updateTable() {
-        Object[][] data = new Object[dataList.size()][3];
-        Object e = dataList.getFirst();
-        if(e instanceof Equipment eq){
-            dataList = new ArrayList<>();
-            dataList = (List<T>) new ArrayList<>(web.getHardware().values());
-        }else if(e instanceof Location loc){
-            dataList = new ArrayList<>();
-            dataList = (List<T>) new ArrayList<>(web.getLocations().values());
-        }else if(e instanceof Location loc){
-            dataList = new ArrayList<>();
-            dataList = (List<T>) new ArrayList<>(web.getConnections());
-    }
+        // Inicializa dataList basado en el tipo del primer elemento
+        Object e = dataList.isEmpty() ? null : dataList.get(0);
 
+        if (e instanceof Equipment) {
+            dataList = (List<T>) new ArrayList<>(web.getHardware().values());
+        } else if (e instanceof Location) {
+            dataList = (List<T>) new ArrayList<>(web.getLocations().values());
+        } else if (e instanceof Connection) {
+            dataList = (List<T>) new ArrayList<>(web.getConnections());
+        }
+
+        // Ahora inicializa el array `data` con el tamaño adecuado de dataList
+        Object[][] data = new Object[dataList.size()][3];
+
+        // Rellena los datos de la tabla
         for (int i = 0; i < dataList.size(); i++) {
             T item = dataList.get(i);
             if (item instanceof Equipment equipment) {
@@ -81,9 +83,9 @@ public class DesplegableComponent<T> {
                 data[i][1] = location.getDescription();
                 data[i][2] = location;
             } else if (item instanceof Connection connection) {
-                data[i][0] = STR."\{((Connection) item).getPort1().getPortType().getCode()} - \{((Connection) item).getPort2().getPortType().getCode()}";
+                data[i][0] = String.format("%s - %s", connection.getPort1().getPortType().getCode(), connection.getPort2().getPortType().getCode());
                 data[i][1] = connection.getWire().getDescription();
-                data[i][2] = item;
+                data[i][2] = connection;
             } else {
                 data[i][0] = item.toString();
                 data[i][1] = "";
@@ -91,14 +93,18 @@ public class DesplegableComponent<T> {
             }
         }
 
+        // Actualiza el modelo de la tabla
         DefaultTableModel model = new DefaultTableModel(data, new String[]{"Nombre", "Descripción", "Objeto"});
         table.setModel(model);
 
+        // Oculta la columna de objetos
         table.getColumnModel().getColumn(2).setMinWidth(0);
         table.getColumnModel().getColumn(2).setMaxWidth(0);
         table.getColumnModel().getColumn(2).setWidth(0);
-        table.repaint();
+
+        table.repaint();  // Redibuja la tabla
     }
+
 
     public void setCoordinator(Coordinator coordinator) {
         this.coordinator = coordinator;
